tests/e2e/pass/v6_explicit_container_fields.ep
# EXIT: 0
# STDOUT: ok

struct S {
    xs: i64[]
}

fun add_one(xs: i64[]): void {
    xs.push(1)
}

fun main(): i64 {
    let s = new S { xs: new i64[] }
    assert(len(s.xs) == 0)
    assert(cap(s.xs) == 0)
    s.xs.push(7)
    add_one(s.xs)
    assert(len(s.xs) == 2)
    assert(s.xs[0] == 7)
    assert(s.xs[1] == 1)

    println("ok")
    ret 0
}

