tests/e2e/fail/null_slice_field.ep
# EXIT: 1
struct S {
    xs: i64[]
}

fun main(): void {
    let s = new S {}
    println(len(s.xs))
}
